updated clock and RESUME. added landing page html, css, js

--- a/001-clock/clock.html
+++ b/001-clock/clock.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="clock.css" />
   </head>
   <body>
-    <header class="time">The Time Is:</header>
+    <header>
+      <span class="date"></span>
+      <br />
+      <span class="time"></span>
+    </header>
     <div class="clock">
       <div class="outer-clock-face">
         <div class="inner-clock-face">
