--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- MY CSS -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <header class="container-fluid" id="header-wrapper">
       <nav class="navbar navbar-expand-sm">
         <div class="header-nameplate">
@@ -94,7 +94,177 @@
         <div class="container">
           <h2 class="text-left py-3">Projects</h2>
           <div class="row text-center">
-            <div class="projects col py-4">001 - Clock</div>
+            <div class="projects project1 col py-4">
+              <a href="./001-clock/clock.html">001 - Clock</a>
+            </div>
+            <div class="projects col py-4">002 - Color Game</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">Coming Soon.</div>
+          </div>
+
+          <div class="row text-center">
+            <div class="projects col py-4">Coming Soon.</div>
             <div class="projects col py-4">Coming Soon.</div>
             <div class="projects col py-4">Coming Soon.</div>
             <div class="projects col py-4">Coming Soon.</div>
@@ -104,7 +274,7 @@
     </main>
 
     <!-- !FOOTER -- CONTACT ME-->
-    <footer class="container-fluid">
+    <footer class="mt-4 py-5 px-4">
       <div class="row footer">
         <div class="col col-xs-6 col-footer">
           <div class="footer-nameplate text-left">Get In Touch With Me</div>
