--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
       <section class="project-list" id="projects">
         <div class="container">
-          <h2 class="text-left py-3">Projects</h2>
+          <h2 class="title text-left py-3">Projects</h2>
           <div class="row text-center">
             <div class="projects project1 col py-4">
               <a href="./001-clock/clock.html">001 - Clock</a>
