--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
             <div class="projects project1 col py-4">
               <a href="./001-clock/clock.html">001 - Clock</a>
             </div>
-            <div class="projects col py-4">002 - Color Game</div>
+            <div class="projects col py-4">
+              <a href="./002-colorgame/colorgame.html"> 002 - Color Game</a>
+            </div>
             <div class="projects col py-4">Coming Soon.</div>
             <div class="projects col py-4">Coming Soon.</div>
           </div>
