constructed simple API fetch for dad jokes. Updated index.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
             <div class="projects col py-4">
               <a href="./002-colorgame/colorgame.html"> 002 - Color Game</a>
             </div>
-            <div class="projects col py-4">Coming Soon.</div>
+            <div class="projects col py-4">
+              <a href="./003-omgdad/omgdad.html">003 - OMGDAD.</a>
+            </div>
             <div class="projects col py-4">Coming Soon.</div>
           </div>
 
