edited functionality for OMGDAD

--- a/003-omgdad/omgdad.html
+++ b/003-omgdad/omgdad.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row text-center justify-content-center my-3">
-        <div class="col-10">
-          <h1 class="dot">
+      <div class="row text-center justify-content-center my-1">
+        <div class="dot col-10">
+          <h1>
             This is dedicated to my daughter who will
             <br />
             have a lifetime of these jokes from me.
